# AI-ConversBot

./: App.py  README.md
native_agent/: README.md  pyproject.toml  requirements.txt
native_agent/native_agent/: cli.py
native_agent/native_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
native_agent/native_agent/pipeline/: __init__.py  eth_analyzer.py  rewriter.py
native_agent/native_agent/providers/: __init__.py  base.py  openai_provider.py
native_agent/native_agent/server/: __init__.py  api.py
native_agent/prompts/: base_rewrite.txt
native_agent/tests/: conftest.py  test_eth_analyzer.py  test_rewriter.py
