[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "native-agent"
version = "0.1.0"
description = "An AI agent to rewrite messages into native English"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = []

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.setuptools.package-data]
native_agent = [
  "prompts/*.txt",
]

